test/compile-errors/wrong-number-type-args.crow
magic<out, in> out?(a in?)
	()

use-it<out, in> out?(a in?)
	a magic@<out>
